syntax = "proto3";
package greet;

service GreetService {
    //uniary api 
    rpc Greet (GreetRequest) returns (GreetResponse) {}
}

message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string message = 1;
}